--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     overflow: hidden; /* Prevent scrolling */
 }
 
+p { 
+    font-size: 5vw;
+}
+
 #quiz-container {
     display: flex;
     flex-direction: column;
@@ -29,7 +33,7 @@ button {
     color: #f5f5f5;
     border: none;
     padding: 30px 110px; /* Increased padding for larger buttons */
-    font-size: 2.5vw;   /* Increased font size for better readability */
+    font-size: 5vw;   /* Increased font size for better readability */
     cursor: pointer;
     transition: background-color 0.3s;
     border-radius: 8px;
@@ -44,8 +48,8 @@ button:hover {
     display: block;
     width: 100%;
     margin: 10px 0;
-    padding: 2vw; /* Responsive padding */
-    font-size: 2vw; /* Responsive font size for options */
+    padding: 4vw; /* Responsive padding */
+    font-size: 6vw; /* Responsive font size for options */
     background-color: #1f1f1f;
     color: #f5f5f5;
     border: none;
